# Sandstone-AI

./: .gitignore  COMMANDS.md  README.md  evaluate.py  main.py  pyproject.toml  redline.py  test_evaluation.py  test_models.py  test_step2b.py  test_step4_full.py
docs/: bad_document.txt.rtf  problem.docx
sandstone/: __init__.py  config.py
sandstone/evals/: __init__.py  dataset.py  evaluators.py  models.py  task.py
sandstone/models/: document.py  evaluation.py  playbook.py  redline.py
sandstone/prompts/: issue_detector.py
sandstone/services/: document_parser.py  evaluator.py  issue_analyzer.py  playbook_loader.py  semantic_matcher.py
sandstone/tests/: __init__.py  run_pydantic_evals.py  test_step2a.py  test_step3.py  test_step4.py
